# Husky_mobile_robot_automation

./: .gitignore  CLAUDE.md  README.md  SYSTEM_OVERVIEW.md  notes.md  robot.srdf  robot.urdf.xacro  robot.yaml
autonomy_bringup/: package.xml  setup.cfg  setup.py
autonomy_bringup/autonomy_bringup/: aruco_detector.py  aruco_follower.py  aruco_goal_manager.py  aruco_tracker.py  plot_controller_compare.py  plot_localisation.py  robot1_tf_republisher.py
docs/: IMPLEMENTATION_SUMMARY.md  MULTI_ROBOT_SETUP.md  PROJECT_REPORT.md  PROJECT_REPORT.tex  demo_multi_robot.launch.py  demo_one_robot_with_markers.py
navigation/: CMakeLists.txt  NAV_DEBUG.md  NAV_TROUBLESHOOTING.md  README.md  nav_diagnostics.sh  nav_recovery.sh  package.xml  setup.py  start_navigation.sh
navigation/config/: localization_gps.yaml  nav2_params.yaml  waypoints_corridor.yaml  waypoints_figure8.yaml  waypoints_square.yaml
navigation/launch/: navigation.launch.py
navigation/navigation/: __init__.py  waypoint_navigator.py
navigation/scripts/: waypoint_navigator.py
robot2/: robot.srdf  robot.srdf.xacro  robot.urdf.xacro  robot.yaml
simple_motion_pkg/: package.xml  setup.cfg  setup.py
state_estimation/: HOW_TO_RUN.txt  QUICK_START.md  README.md  START_HERE.txt  SUMMARY.txt  compare_filters.py  evaluate_performance.py  run_filter_comparison.py  run_test.sh  sensor_fusion_ekf.py  sensor_fusion_pf.py  sensor_fusion_ukf.py  test_mock_sensors.py  visualize_state.py
trajectory_planner_pkg/: package.xml  setup.cfg  setup.py
workspace_notes/: algorithms.md  claude_prompt_dual_robot_goal_follow.md  iteration.md  notes.md  workspace_status.md
(+70 files in other folders)
