<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation</name>
  <version>0.1.0</version>
  <description>Autonomous navigation for Clearpath A300 with Nav2 waypoint navigation</description>
  
  <maintainer email="prajjwal@example.com">Prajjwal</maintainer>
  <license>Apache-2.0</license>
  
  <author email="prajjwal@example.com">Prajjwal</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
